<resources>
    <string name="app_name">Ersatz.</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="vk">Vk</string>
    <string name="fb">Fb</string>
    <string name="twitter">Twitter</string>
    <string name="skype">Skype</string>
    <string name="github">GitHub</string>
    <string name="instagram">Instagram</string>
    <string name="linkedin">LinkedIn</string>
    <string name="email">Email</string>
    <string name="signin">Sign In</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="signup">Sign Up</string>
    <string name="account_name">Account Name</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create new account</string>
    <string name="sign_out">Sign Out</string>
    <string name="search">Search</string>
    <string name="qr_code">QR-code</string>
    <string name="check_credentials">Check credentials</string>
    <string name="success_message">Account created! Now sign in…</string>
    <string name="incorrect_name_or_pass_message">Incorrect account name or password</string>
    <string name="server_error_message">Server error</string>
    <string name="unknown_error_message">Unknown error</string>
    <string name="no_internet_message">No Internet Connection</string>
    <string name="enter_account_name_message">enter account name</string>
    <string name="enter_pass_message">enter password</string>
    <string name="pre_exit_message">Tap back button in order to exit</string>
    <string name="signin_progress_message">Signing in…</string>
    <string name="signup_progress_message">Signing up…</string>
    <string name="account_exists_message">Account already exists</string>
    <string name="short_name_message">at least 3 characters</string>
    <string name="short_password_message">between 4 and 10 alphanumeric characters</string>
    <string name="pass_not_match_message">Password does not match</string>
    <string name="save">save</string>
    <string name="enter_valid_email_message">enter a valid email address</string>
    <string name="error_saving_profile">Error saving profile</string>
    <string name="profile_saved">Profile saved</string>
    <string name="anonymous_colleague">Anonymous colleague</string>
    <string name="empty_view_title_text">No ersatzes yet</string>
    <string name="empty_view_subtitle_text">Start by adding one</string>
    <string name="no_results_message">No results</string>
    <string name="delete_all">Delete all</string>
    <string name="all_profiles_deleted_message">All profiles deleted</string>
    <string name="delete_all_contacts_confirmation">Delete all contacts?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

</resources>
