<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="8dp">

    <!-- first name -->
    <android.support.design.widget.TextInputLayout style="@style/text_input_wrapper">

        <EditText
            android:id="@+id/input_first_name"
            style="@style/text_input"
            android:hint="@string/first_name" />
    </android.support.design.widget.TextInputLayout>

    <!-- middle name -->
    <android.support.design.widget.TextInputLayout style="@style/text_input_wrapper">

        <EditText
            android:id="@+id/input_middle_name"
            style="@style/text_input"
            android:hint="@string/middle_name" />
    </android.support.design.widget.TextInputLayout>

    <!-- last name -->
    <android.support.design.widget.TextInputLayout style="@style/text_input_wrapper">

        <EditText
            android:id="@+id/input_last_name"
            style="@style/text_input"
            android:hint="@string/last_name" />
    </android.support.design.widget.TextInputLayout>

    <!-- email -->
    <android.support.design.widget.TextInputLayout style="@style/text_input_wrapper">

        <EditText
            android:id="@+id/input_email"
            style="@style/text_input"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <!-- skype -->
    <android.support.design.widget.TextInputLayout style="@style/text_input_wrapper">

        <EditText
            android:id="@+id/input_skype"
            style="@style/text_input"
            android:hint="@string/skype"
            android:inputType="none" />
    </android.support.design.widget.TextInputLayout>

    <!-- github -->
    <android.support.design.widget.TextInputLayout style="@style/text_input_wrapper">

        <EditText
            android:id="@+id/input_github"
            style="@style/text_input"
            android:hint="@string/github"
            android:inputType="textUri" />
    </android.support.design.widget.TextInputLayout>

    <!-- vk -->
    <android.support.design.widget.TextInputLayout style="@style/text_input_wrapper">

        <EditText
            android:id="@+id/input_vk"
            style="@style/text_input"
            android:hint="@string/vk"
            android:inputType="textUri" />
    </android.support.design.widget.TextInputLayout>

    <!-- fb -->
    <android.support.design.widget.TextInputLayout style="@style/text_input_wrapper">

        <EditText
            android:id="@+id/input_fb"
            style="@style/text_input"
            android:hint="@string/fb"
            android:inputType="textUri" />
    </android.support.design.widget.TextInputLayout>

    <!-- twitter -->
    <android.support.design.widget.TextInputLayout style="@style/text_input_wrapper">

        <EditText
            android:id="@+id/input_twitter"
            style="@style/text_input"
            android:hint="@string/twitter"
            android:inputType="textUri" />
    </android.support.design.widget.TextInputLayout>

    <!-- instagram -->
    <android.support.design.widget.TextInputLayout style="@style/text_input_wrapper">

        <EditText
            android:id="@+id/input_instagram"
            style="@style/text_input"
            android:hint="@string/instagram"
            android:inputType="textUri" />
    </android.support.design.widget.TextInputLayout>

    <!-- linkedin -->
    <android.support.design.widget.TextInputLayout style="@style/text_input_wrapper">

        <EditText
            android:id="@+id/input_linkedin"
            style="@style/text_input"
            android:hint="@string/linkedin"
            android:inputType="textUri" />
    </android.support.design.widget.TextInputLayout>

</LinearLayout>