<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="56dp">

        <!-- logo -->
        <ImageView
            android:layout_width="104dp"
            android:layout_height="104dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:src="@drawable/logo" />

        <!-- account name -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_account_name_wrapper"
            style="@style/text_input_wrapper">

            <EditText
                android:id="@+id/input_account_name"
                style="@style/text_input"
                android:hint="@string/account_name" />
        </android.support.design.widget.TextInputLayout>

        <!--  password -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_password_wrapper"
            style="@style/text_input_wrapper"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/input_password"
                style="@style/text_input"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <!-- signin button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_signin"
            style="@style/button"
            android:text="@string/sign_in" />

        <!-- signup link -->
        <TextView
            android:id="@+id/link_signup"
            style="@style/sign_in_up_link"
            android:text="@string/create_new_account"
            />

    </LinearLayout>
</ScrollView>